fixed layout issues.  redid score milestone anim

--- a/www/css/crab-animation.css
+++ b/www/css/crab-animation.css
@@ -237,18 +237,36 @@ When fired, adds/removes e.g. .rLeg1-move class.
 }
 
 /*********** Max Score updates ***************/
+.score-milestone {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    margin: 0;
+
+    font-family: Verdana, sans-serif;
+    font-size: calc(0.5rem + 20vw);
+    font-weight: 900;
+    color: red;
+    opacity: 0;
+    text-shadow: 
+        -1px -1px 0 white,
+        1px -1px 0 white,
+        -1px 1px 0 white,
+        1px 1px 0 white;
+}
+
 .red-fade {
-    animation: red-fade 1.5s 1;
+    animation: red-fade 1s 1 ease-in;
+    
 }
 
 @keyframes red-fade {
     from {
-        color: rgb(255, 0, 0);
-        font-size: calc(0.5rem + 5vw);
+        font-size: calc(0.5rem + 20vw);
+        opacity: 1;
     }
     to {
-        color: white;
-        /* this is the original font-size, from #status-bar in index.css */
         font-size: calc(0.5rem + 3vw);
+        opacity: 0;
     }
 }
